fixed jumping hands

--- a/style.scss
+++ b/style.scss
@@ -41,6 +41,26 @@ body {
   top:50%;
   transform-origin: 100%;
   transform: rotate(90deg);
-  transition: all .05s;
-  transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1); 
+}
+
+.second-hand {
+  background: white;
+}
+
+.hour-hand {
+  width: 40%;
+  height: 9px;
+  left: 10%;
+  transform-origin: 98%;
+}
+
+.dot {
+  background: white;
+  height: 5%;
+  width: 5%;
+  position: absolute;
+  top: 48.5%;
+  left: 47.5%;
+  transform-origin: 100%;
+  border-radius: 50%;
 }
